--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit
-numpy
-pandas
-sckit-learn
-matplotlib
-seaborn
-plotly.express
-MinMaxScaler
-BaseEstimator
-TransformerMixin
-joblib
-sqlite3
+import streamlit as st
+import numpy as np
+import pandas as pd
+import joblib
+from joblib import load
+import sqlite3
+import matplotlib.pyplot as plt
+import seaborn as sns
+import plotly.express as px
+import plotly.graph_objects as go
+from sklearn.base import BaseEstimator, TransformerMixin
