--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-import streamlit as st
-import numpy as np
-import pandas as pd
-import joblib
-from joblib import load
-import sqlite3
-import matplotlib.pyplot as plt
-import seaborn as sns
-import plotly.express as px
-import plotly.graph_objects as go
-from sklearn.base import BaseEstimator, TransformerMixin
+streamlit
+numpy
+pandas
+joblib
+sqlite3
+matplotlib
+seaborn
+plotly
+scikit
+BaseEstimator
+TransformerMixin
